# cocojambo

./: .coverage  .gitignore  Pipfile  README.md  Users:sofiayarema:Desktop:c.textClipping  app.py  pyproject.toml
.github/workflows/: actions.yml  lint-check.yml  python-app.yml  python-tests.yml
chapter_2/: .env  README.md  task.py  task7.py
chapter_2/lab_1/: 7.py  readme.md
chapter_2/lab_1/pictures/: readme.md
chapter_2/lab_2/: pyproject.toml  readme.md  test-app.py  test1.py  test_figure.py  tests.py
chapter_2/lab_3/: readme.md
exam/: main.py  readme.md  test.py
init/: readme.md
lab_1/: first_app.py  my_first_app.ipynb  readme 15.21.51.md
lab_1/init/: readme.md
lab_2/: example.txt  smth_on_pthn..ipynb  zvit.md
lab_3/: numbers'methods.ipynb  readme.md
lab_4/: my_mass.npz  numbers'methods2.ipynb  readme.md  temp.csv
