[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "aremasofia22",email = "aremasofia22@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "myproject", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
